Fixed horizontal overflow issue when a vertical scrollbar is visible.

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -9,6 +9,7 @@ nav {
     flex-wrap: wrap;
     max-height: 22vh; 
     margin-bottom: 2vh;
+    overflow-x: hidden;
 
 }
 
